# Divi-lovenode

./: .gitignore  Cargo.toml  LICENSE  README.md  START-HERE.md
app/: HANDOFF-JAMES.md  README-ANDROID.md  README.md
app/android-plugin/: SecureKeyStore.kt  StakingService.kt
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: commands.rs  lib.rs  state.rs
app/ui/: index.html  package.json  tsconfig.json
app/ui/src/: App.tsx  api.ts  index.css  tauri.ts
crates/lovenode-c2pa/: Cargo.toml
crates/lovenode-c2pa/src/: lib.rs  record.rs
crates/lovenode-core/: Cargo.toml
crates/lovenode-core/src/: block.rs  kernel.rs  lib.rs  serialize.rs  tx.rs  u256.rs
crates/lovenode-keystore/: Cargo.toml
crates/lovenode-keystore/src/: lib.rs
crates/lovenode-phone/: Cargo.toml
crates/lovenode-phone/examples/: wire_stake.rs
crates/lovenode-phone/src/: client.rs  lib.rs
crates/lovenode-relay/: Cargo.toml
crates/lovenode-relay/examples/: end_to_end_stake.rs
crates/lovenode-relay/src/: chain.rs  engine.rs  lib.rs  main.rs  protocol.rs  registry.rs  rpc.rs  server.rs  session.rs  wire.rs
crates/lovenode-rewards/: Cargo.toml
crates/lovenode-rewards/src/: lib.rs
crates/lovenode-sign/: Cargo.toml
crates/lovenode-sign/src/: lib.rs  script.rs  sighash.rs  wallet.rs
docs/: ANDROID-PLAN.md  C2PA-ASSERTION.md  FOR-OTHER-AGENTS.md  PROTOCOL.md  SECURITY.md
