[workspace]
resolver = "2"
members = [
    "crates/lovenode-c2pa",
    "crates/lovenode-core",
    "crates/lovenode-phone",
    "crates/lovenode-rewards",
    "crates/lovenode-relay",
    "crates/lovenode-sign",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/geoffmccabe/Divi-lovenode"
