[package]
name = "lovenode-keystore"
description = "Where the staking key lives. A platform-agnostic contract with an in-memory dev backend; Android Keystore / iOS Keychain plug in behind it."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
zeroize = "1"
lovenode-sign = { path = "../lovenode-sign" }
