[package]
name = "lovenode-phone"
description = "The on-device staker: verifies a relay's win, builds and signs a block itself. The security core of the phone app."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lovenode-core = { path = "../lovenode-core" }
lovenode-sign = { path = "../lovenode-sign" }
lovenode-relay = { path = "../lovenode-relay" }
tokio = { version = "1", features = ["rt", "net", "time", "macros", "sync"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
