[package]
name = "lovenode-relay"
description = "LoveNode relay: watches the chain, runs the stake win-search for registered phones, relays winning blocks."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lovenode-core = { path = "../lovenode-core" }
lovenode-rewards = { path = "../lovenode-rewards" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["json"] }
